--- a/emacs.org
+++ b/emacs.org
@@ -114,6 +114,21 @@ snapshots instead of 'stable' releases.
   (require 'package)
 #+END_SRC
 
+*** Define custom
+
+This defines where values are set if you use Customize.  My preference
+is to configure Emacs in this file and then tangle it.  However, there
+are some packages that set values via /customize/.  This configures the
+=custom-file= to be /custom.el/.  If =custom-file= is /nil/, Emacs will
+use the init file as specified by =user-init-file=, which is typically
+/init.el/.
+
+#+BEGIN_SRC emacs-lisp
+(setq custom-file (concat user-emacs-directory "custom.el"))
+(when (file-exists-p custom-file)
+  (load custom-file))
+#+END_SRC
+
 *** Install packages if necessary
 
 ELPA provides a nice resource to install packages.  The following
@@ -1716,14 +1731,6 @@ In general, use spaces instead of tabs.
 (setq-default indent-tabs-mode nil)
 #+END_SRC
 
-This defines where values are set if you use Customize.  My preference
-is to configure things here or in _init.el_.
-
-#+BEGIN_SRC emacs-lisp
-(setq custom-file (concat user-emacs-directory "custom.el"))
-(when (file-exists-p custom-file)
-  (load custom-file))
-#+END_SRC
 **** DONE Making opening files easier
      CLOSED: [2014-05-06 Tue 09:17]
 
